# TuxType

./: .gitignore  README.md  pyproject.toml  requirements.txt  tuxtype.py
data/: database.db  tuxtype.config  user_config.toml
data/quotes/: quotes.json
data/wordlists/: english_1k.txt  english_2k.txt  english_uk.txt  programming.txt
src/: __init__.py  app.py  constants.py  main.py
src/core/: __init__.py  stats_calculator.py  test_engine.py  word_generator.py
src/database/: __init__.py  db_manager.py  models.py
src/screens/: __init__.py  history_screen.py  main_menu.py  results_screen.py  settings_screen.py  splash_screen.py  stats_screen.py  test_screen.py
src/utils/: __init__.py  config.py  logging_config.py
src/widgets/: __init__.py  graph.py  stats_display.py  status_bar.py  typing_area.py
